--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar" id="main-navbar" style="display: none;">
         <div class="nav-container">
             <div class="nav-brand">
                 <h1><i class="fas fa-map-marker-alt"></i> Zutreffen</h1>
@@ -135,7 +135,7 @@
                 </div>
                 
                 <div class="filters">
-                    <input type="text" id="place-search" placeholder="Search places..." oninput="filterPlaces()">
+                    <input type="text" id="place-search" placeholder="Search places by name..." oninput="filterPlaces()">
                     <select id="city-filter" onchange="filterPlaces()">
                         <option value="">All Cities</option>
                     </select>
@@ -149,6 +149,9 @@
                         <option value="park">Park</option>
                         <option value="other">Other</option>
                     </select>
+                    <button class="btn btn-primary" onclick="useMyLocation()">
+                        <i class="fas fa-location-arrow"></i> Use My Location
+                    </button>
                 </div>
                 
                 <div id="places-grid" class="places-grid">
