feat: Update README and frontend to enhance geographic search functionality and improve API test page

--- a/frontend/test-api.html
+++ b/frontend/test-api.html
@@ -81,7 +81,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:8001/api/v1';
+    const API_BASE = window.location.origin + '/api/v1';
 
         // Display browser info
         document.getElementById('browser-info').textContent = 
